--- a/src/index.html
+++ b/src/index.html
@@ -319,20 +319,20 @@
 					<span id="greeting-name"></span>
 				</h2>
 
-				<a id="weather" class="wait init" rel="noreferrer">
-					<div id="description" data-hide="weatherdesc">
-						<p id="current">
-							<span id="current-desc"></span>
-							<span id="current-temp"></span>
-						</p>
-						<p id="forecast">forecast</p>
-					</div>
-
-					<div id="tempContainer" data-hide="weathericon">
-						<span id="weather-icon" data-daytime="day" data-condition="fewclouds"></span>
-						<p>00</p>
-					</div>
-				</a>
+				<!-- <a id="weather" class="wait init" rel="noreferrer"> -->
+				<!-- 	<div id="description" data-hide="weatherdesc"> -->
+				<!-- 		<p id="current"> -->
+				<!-- 			<span id="current-desc"></span> -->
+				<!-- 			<span id="current-temp"></span> -->
+				<!-- 		</p> -->
+				<!-- 		<p id="forecast">forecast</p> -->
+				<!-- 	</div> -->
+				<!---->
+				<!-- 	<div id="tempContainer" data-hide="weathericon"> -->
+				<!-- 		<span id="weather-icon" data-daytime="day" data-condition="fewclouds"></span> -->
+				<!-- 		<p>00</p> -->
+				<!-- 	</div> -->
+				<!-- </a> -->
 			</div>
 
 			<div id="notes_container" class="hidden"></div>
